# wahoo-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  test_auth.py
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: auth.py  fit_analysis.py  models.py  server.py  token_store.py  types.py
src/schemas/: create_plan.json  get_plan.json  get_power_zone.json  get_route.json  get_workout.json  list_plans.json  list_routes.json  list_workouts.json
tests/: test_auth.py  test_server.py  test_token_store.py
